--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,15 @@
-<div class="nav-scroller py-1 mb-2">
+<div class="nav-scroller py-1 mb-2 contr">
   <nav class="nav d-flex justify-content-between">
-    <a class="p-2 link-secondary" href="#">World</a>
-    <a class="p-2 link-secondary" href="#">Technology</a>
-    <a class="p-2 link-secondary" href="#">Design</a>
-    <a class="p-2 link-secondary" href="#">Culture</a>
-    <a class="p-2 link-secondary" href="#">Business</a>
-    <a class="p-2 link-secondary" href="#">Opinion</a>
-    <a class="p-2 link-secondary" href="#">Science</a>
-    <a class="p-2 link-secondary" href="#">Health</a>
-    <a class="p-2 link-secondary" href="#">Style</a>
-    <a class="p-2 link-secondary" href="#">Travel</a>
+    <a class="p-2 link-secondary" (click)="setCtegory('World')">World</a>
+    <a class="p-2 link-secondary" (click)="setCtegory('Technology')">Technology</a>
+    <a class="p-2 link-secondary" (click)="setCtegory('Design')">Design</a>
+    <a class="p-2 link-secondary" (click)="setCtegory('Culture')">Culture</a>
+    <a class="p-2 link-secondary" (click)="setCtegory('Business')">Business</a>
+    <a class="p-2 link-secondary" (click)="setCtegory('Opinion')">Opinion</a>
+    <a class="p-2 link-secondary" (click)="setCtegory('Science')">Science</a>
+    <a class="p-2 link-secondary" (click)="setCtegory('Health')">Health</a>
+    <a class="p-2 link-secondary" (click)="setCtegory('Style')">Style</a>
+    <a class="p-2 link-secondary" (click)="setCtegory('Travel')">Travel</a>
   </nav>
 </div>
 <div class="row d-flex">
@@ -20,78 +20,33 @@
       alt=""
     />
     <div class="col-md-6 px-0 m-5">
-      <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
+      <h1 class="display-4 fst-italic">Welcome!</h1>
       <p class="lead my-3">
-        Multiple lines of text that form the lede, informing new readers quickly
-        and efficiently about what’s most interesting in this post’s contents.
+       This blog publishes news from the world of technology, business, travel, culture, fashion, health.
+       Join us, register now and write your first post!
       </p>
       <p class="lead mb-0">
-        <a href="#" class="text-white fw-bold">Continue reading...</a>
+        <a href="#" [routerLink]="['/reg']" class="text-white fw-bold">Registration...</a>
       </p>
     </div>
   </div>
 
-  <div class="col-md-4">
-    <div class="card shadow-sm">
-      <img
-        src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/08/a4/a2/1a/lago-di-braies.jpg?w=1200&h=-1&s=1"
-        alt=""
-      />
+  <div *ngFor="let post of posts | sorting:category" class="col-md-4">
+    <div class="p-0 m-1 card shadow-sm">
+      <quill-view [content]="post.photo"></quill-view>
       <div class="card-body mb-3">
-        <div class="d-flex justify-content-between align-items-center">
-          <strong class="mb-2 text-primary">World</strong>
-          <small class="text-muted">9 mins</small>
+        <div class="m-0 d-flex justify-content-between align-items-center">
+          <strong class="mb-2 text-primary">{{post.category}}</strong>
+          <small class="text-muted">{{post.date  | date: 'short'}}</small>
         </div>
-        <h3>
-          <a class="text-dark" href="#">Title</a>
-        </h3>
-        <p class="card-text">
-          This is a wider card with supporting text below as a natural lead-in
-          to additional content. This content is a little bit longer.
-        </p>
+        <h4 class="mb-3">
+          <a [routerLink]="['post', post._id]" class="text-dark" href="#">{{post.title}}</a>
+        </h4>
+        <div  class="quill-text"> <quill-view  [content]="post.text"></quill-view></div>
+        <a [routerLink]="['post', post._id]" class="link mt-3" href="#">Read more...</a>
       </div>
+      
     </div>
   </div>
-  <div class="col-md-4">
-    <div class="card shadow-sm">
-      <img
-        src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/08/a4/a2/1a/lago-di-braies.jpg?w=1200&h=-1&s=1"
-        alt=""
-      />
-      <div class="card-body mb-3">
-        <div class="d-flex justify-content-between align-items-center">
-          <strong class="mb-2 text-primary">World</strong>
-          <small class="text-muted">9 mins</small>
-        </div>
-        <h3>
-          <a class="text-dark" href="#">Title</a>
-        </h3>
-        <p class="card-text">
-          This is a wider card with supporting text below as a natural lead-in
-          to additional content. This content is a little bit longer.
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-4">
-    <div class="card shadow-sm">
-      <img
-        src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/08/a4/a2/1a/lago-di-braies.jpg?w=1200&h=-1&s=1"
-        alt=""
-      />
-      <div class="card-body mb-3">
-        <div class="d-flex justify-content-between align-items-center">
-          <strong class="mb-2 text-primary">World</strong>
-          <small class="text-muted">9 mins</small>
-        </div>
-        <h3>
-          <a class="text-dark" href="#">Title</a>
-        </h3>
-        <p class="card-text">
-          This is a wider card with supporting text below as a natural lead-in
-          to additional content. This content is a little bit longer.
-        </p>
-      </div>
-    </div>
-  </div>
+
 </div>
