add update for post

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -43,7 +43,7 @@
     ></quill-editor>
 
     <button class="w-100 btn btn-lg text-bg-dark mt-3 mb-5" type="submit">
-      Create
+      {{ postData ? "Edit" : "Create" }}
     </button>
   </form>
 </div>
